add internationlisation, new program wizard

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!-- TODO: change title -->
     <title>Diorama</title>
+    <style>
+      #newProgramWizard {
+        height: auto !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>
