--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <!-- TODO: change favicon -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- TODO: change title -->
     <title>Diorama</title>
-    <style>
-      #newProgramWizard {
-        height: auto !important;
-      }
-    </style>
   </head>
   <body>
+    <link rel="stylesheet" href="%PUBLIC_URL%/customStyles.css" />
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
